# dictionary-forge

./: .gitignore  LICENSE  README.md  metadata_definition.yaml  pyproject.toml  run.bat  setup.bat
config/: metadata_definition.yaml  regulations.json  templates_standard.yaml  templates_user.json
src/: app.py  constants.py
src/components/: bulk_action_ui.py  cloning_modal.py  edition_modal.py  export_modal.py  export_utils.py  governance_manager.py  ingestion_ui.py  project_form.py  quality_modal.py  sidebar.py  template_modal.py
src/components/variable_form/: __init__.py  handlers.py  tracker.py  widgets.py
src/logic/: __init__.py  blueprints.py  coherence.py  exporters.py  governance.py  logic.py  templates.py  transformers.py
src/sections/: __init__.py  batch_forge.py  cleaning.py  constraints.py  core.py  database.py  governance.py  identification.py  ingestion.py  technical_config.py  template_manager.py  visualization.py
templates/: boolean_flag.yaml  entity_id.yaml  financial_value.yaml  geo_region_iso.yaml  likert_survey_item.yaml  timestamp_iso.yaml
tests/: test_coherence.py  test_transformers.py
