# Description: Configuration for project metadata, dependencies, and linting standards.

[project]
name = "dictionary-forge"
version = "0.1.0"
description = "A multipurpose data dictionary generator."
authors = [
    { name = "Ender De Freitas", email = "endpsych@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
keywords = ["data-governance", "metadata", "dictionary", "automation", "python"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "streamlit>=1.54.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

# ==============================================================================
# Ruff Configuration (Linter & Formatter)
# ==============================================================================
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports/variables)
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modern syntax enforcement)
    "N",   # pep8-naming (naming conventions)
    "PD",  # pandas-vet (pandas-specific best practices)
]

ignore = [
    "E501", # Line-length for strings (handled by ruff format)
]